[metadata]
name = linsolve
author = HERA Team
url=https://github.com/HERA-Team/linsolve
license=BSD
license_file=LICENSE
long_description = file: README.md
long_description_content_type = text/x-md
description= high-level tools for linearizing and solving systems of equations
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics
keywords=
    linear equations
    optimal estimation

[options]
packages = find:
include_package_data= True
package_dir =
    =src
install_requires=
    numpy>=1.23
    scipy